<resources>
    <string name="app_name">linear_layout</string>
    <string name="rendra_arkananta">Rendra arkananta</string>
    <string name="textview">TextView</string>
    <string name="reza_wijayanti">Reza Wijayanti</string>
    <string name="sadam_hanif_q">Sadam Hanif Q</string>
    <string name="rendra_arananta">Rendra arananta</string>
    <string name="_2233270">2233270</string>
    <string name="reza_wijayani">Reza Wijayani</string>
    <string name="_2233271">2233271</string>
    <string name="nis_2233270">Nis=2233270</string>
    <string name="sadam_hanif_">Sadam Hanif Q</string>
    <string name="nis_2233272">Nis=2233272</string>
    <string name="nis_233271">Nis=233271</string>
</resources>